# nist-cloud-security-baseline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: develop.yml  generate-baseline.yml  main-release.yml
baseline/: nist80053r5_full_catalog_enriched.json  nist80053r5_full_catalog_enriched_2026-02-18T15-03-15Z.json
baseline/historical/: nist80053r5_full_catalog_enriched_2026-02-18T16-51-12Z.json  nist80053r5_full_catalog_enriched_2026-02-18T16-53-16Z.json  nist80053r5_full_catalog_enriched_2026-02-18T17-00-47Z.json  nist80053r5_full_catalog_enriched_2026-02-19T06-59-19Z.json  nist80053r5_full_catalog_enriched_2026-02-20T06-55-21Z.json  nist80053r5_full_catalog_enriched_2026-02-21T06-40-07Z.json  nist80053r5_full_catalog_enriched_2026-02-21T15-01-57Z.json  nist80053r5_full_catalog_enriched_2026-02-21T15-19-16Z.json  nist80053r5_full_catalog_enriched_2026-02-22T06-55-17Z.json
scripts/: bump_version.py
src/ncsb/: __main__.py  generate.py  urls.py
tests/: test_bump_version.py  test_generate.py  test_normalize.py  test_oscal_id.py
